# frank

./: .gitignore  20210226W.cfg  Pipfile  README.md  compile.sh  pyproject.toml  setup.py
20210326-configs/: 20210226AJ.cfg  20210226AJ.csv  20210226W.csv  20210226W.txt
frank/: common.py  io.py  myexample.py
notebooks/: idg-example.ipynb
src/cxx/: CMakeLists.txt  degridding.cpp  gridding.cpp  test-alloc.cpp
src/frank/: beamgain.py  casa-deconvolve-clark.py  casa-deconvolve.py  common.py  constgain.py  dftsource.py  enu.py  iono.py  noise.py  test_dftsource.py  twosrc.py
src/test/: test_noise.py
